--- a/src/main/resources/com/example/wargames/MyArmy.fxml
+++ b/src/main/resources/com/example/wargames/MyArmy.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -19,6 +20,11 @@
                   <Button fx:id="btnCreate" layoutX="476.0" layoutY="42.0" mnemonicParsing="false" onAction="#createUnit" prefHeight="26.0" prefWidth="94.0" text="Create unit" />
                   <Label layoutX="389.0" layoutY="14.0" text="No. of units" />
                   <TextField fx:id="noCreate" layoutX="383.0" layoutY="43.0" prefHeight="26.0" prefWidth="75.0" />
+                  <Label layoutX="3.0" layoutY="74.0" prefHeight="21.0" prefWidth="447.0" text="Options: CavalryUnit, CommanderUnit, RangedUnit, InfantryUnit">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
